--- a/web-pages/01-header/form.html
+++ b/web-pages/01-header/form.html
@@ -230,7 +230,8 @@
     <!-- Start Main -->
     <main class="container">
         <div class="py-5 text-center">
-            <h2>Formulario Checkout</h2>
+            <h2>Checkout</h2>
+            <span>(No hace falta rellenarlo)</span>
         </div>
         <div class="row g-5">
             <div class="col-md-5 col-lg-4 order-md-last">
@@ -298,17 +299,6 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <label for="username" class="form-label">Nombre de usuario</label>
-                            <div class="input-group has-validation">
-                                <span class="input-group-text">@</span>
-                                <input type="text" class="form-control" id="username" placeholder="Nombre de usuario"
-                                    required="">
-                                <div class="invalid-feedback">
-                                    Tu nombre de usuario es requerido.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
                             <label for="email" class="form-label">Email <span
                                     class="text-muted">(Opcional)</span></label>
                             <input type="email" class="form-control" id="email" placeholder="tu@example.com">
@@ -318,7 +308,7 @@
                         </div>
                         <div class="col-12">
                             <label for="address" class="form-label">Dirección</label>
-                            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
+                            <input type="text" class="form-control" id="address" placeholder="Main 1234" required="">
                             <div class="invalid-feedback">
                                 Por favor introduce tu direccion de envio.
                                 Please enter your shipping address.
@@ -333,17 +323,17 @@
                             <label for="country" class="form-label">País</label>
                             <select class="form-select" id="country" required="">
                                 <option value="">Elige...</option>
-                                <option>United States</option>
+                                <option>Argentina</option>
                             </select>
                             <div class="invalid-feedback">
                                 Selecciona un país válido.
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <label for="state" class="form-label">Estado</label>
+                            <label for="state" class="form-label">Provincia</label>
                             <select class="form-select" id="state" required="">
                                 <option value="">Elige...</option>
-                                <option>California</option>
+                                <option>Buenos Aires</option>
                             </select>
                             <div class="invalid-feedback">
                                 Proporciona un estado válido.
@@ -379,10 +369,6 @@
                         <div class="form-check">
                             <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required="">
                             <label class="form-check-label" for="debit">Tarjeta de débito</label>
-                        </div>
-                        <div class="form-check">
-                            <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required="">
-                            <label class="form-check-label" for="paypal">PayPal</label>
                         </div>
                     </div>
                     <div class="row gy-3">
@@ -538,8 +524,6 @@
 
     <!-- Scripts Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="form-validation.js"></script>
 
     <!-- Script SweetAlert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
