--- a/web-pages/01-header/04-sale.html
+++ b/web-pages/01-header/04-sale.html
@@ -200,7 +200,7 @@
         <div class="offcanvas-body">
             <div id="bg-container-offcanvas" class="container-fluid">
                 <!-- Contenedor -->
-                <div id="contenedor_carrito" class="ocultar">
+                <div id="contenedor_carrito">
                     
                 </div>
             </div>
@@ -429,7 +429,6 @@
     <!-- SweetAlert2 -->
     <div id="sweetAlertToast"></div>
     <!-- SweetAlert2 -->
-
 
     <!-- Start Footer -->
     <footer id="footer" class="py-5" style="margin-top: 200px;">
