--- a/web-pages/01-header/form.html
+++ b/web-pages/01-header/form.html
@@ -206,27 +206,6 @@
     </header>
     <!-- End Header -->
 
-    <!-- Start Carrito -->
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-
-        <!-- Offcanvas Header -->
-        <div class="offcanvas-header">
-            <h3 class="offcanvas-title" id="offcanvasRightLabel">Mi Carrito</h3>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-
-        <!-- Offcanvas Body -->
-        <div class="offcanvas-body">
-            <div id="bg-container-offcanvas" class="container-fluid">
-                <!-- Contenedor -->
-                <div id="contenedor_carrito" class="ocultar">
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Carrito -->
-
     <!-- Start Main -->
     <main class="container">
         <div class="py-5 text-center">
@@ -236,49 +215,20 @@
         <div class="row g-5">
             <div class="col-md-5 col-lg-4 order-md-last">
                 <h4 class="d-flex justify-content-between align-items-center mb-3">
-                    <span class="text-primary">Tu carro</span>
-                    <span class="badge bg-primary rounded-pill">3</span>
+                    <span class="text-secondary">Tu carrito</span>
                 </h4>
-                <ul class="list-group mb-3">
-                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                        <div>
-                            <h6 class="my-0">Nombre del producto</h6>
-                            <small class="text-muted">Breve descripción</small>
-                        </div>
-                        <span class="text-muted">$12</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                        <div>
-                            <h6 class="my-0">Segundo producto</h6>
-                            <small class="text-muted">Breve descripción</small>
-                        </div>
-                        <span class="text-muted">$8</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                        <div>
-                            <h6 class="my-0">Tercer elemento</h6>
-                            <small class="text-muted">Breve descripción</small>
-                        </div>
-                        <span class="text-muted">$5</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between bg-light">
-                        <div class="text-success">
-                            <h6 class="my-0">Código promocional</h6>
-                            <small>EXAMPLECODE</small>
-                        </div>
-                        <span class="text-success">−$5</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (USD)</span>
-                        <strong>$20</strong>
-                    </li>
-                </ul>
-                <form class="card p-2">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Código Promo">
-                        <button type="submit" class="btn btn-secondary">Aplicar</button>
+
+                
+                <div id="contenedor_checkout" class="container-fluid">
+                    <!-- Contenedor -->
+                    <div id="contenedor_carrito">
                     </div>
-                </form>
+                </div>
+
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Código Promo">
+                    <button type="submit" class="btn btn-secondary">Aplicar</button>
+                </div>
             </div>
             <div class="col-md-7 col-lg-8">
                 <h4 class="mb-3">Dirección de envio</h4>
@@ -414,6 +364,15 @@
     <div id="sweetAlertToast"></div>
     <!-- SweetAlert2 -->
 
+    <div style="display: none;">
+        <div id="contenedor_cards"></div>
+        <div id="barra_de_busqueda"></div>
+        <div id="boton_buscar"></div>
+        <div id="limpiar_busqueda"></div>
+        <div id="max_min"></div>
+        <div id="min_max"></div>
+        <div class="categorias"></div>
+    </div>
 
     <!-- Start Footer -->
     <footer id="footer" class="py-5" style="margin-top: 200px;">
@@ -530,6 +489,7 @@
 
     <!-- Script js -->
     <script src="/js/checkout.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 
 </html>
